--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 .card {
   background-color: hsl(0, 0%, 100%);
   width: 20vw;
+  display: flex;
   height: 50vh;
   align-items: flex-start;
   flex-direction: column;
